--- a/.github/workflows/test_workflow_call.yaml
+++ b/.github/workflows/test_workflow_call.yaml
@@ -7,5 +7,5 @@ jobs:
   test-workflow:
     runs-on: ubuntu-latest
     steps:
-        - run: echo ${{ github.repository }}
-        - run: echo ${{ toJson(github) }}
+        - run: echo "${{ github.repository }}"
+        - run: echo "${{ toJson(github) }}"
